<resources>
  <string name="app_name">Tip Calculator</string>
  <string name="tip">Tip</string>
  <string name="decrement">-</string>
  <string name="increment">+</string>
  <string name="default_percent">15%</string>
  <string name="zero_percent">0%</string>
  <string name="default_bill_amount">$0.00</string>
  <string name="bill_prefix">$</string>
  <string name="total">Total</string>
  <string name="bill">Bill</string>
</resources>
